--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -1,15 +1,4 @@
-.homepage {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 80px;
-  }
-  
-  .box-list {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.box-list {
     &__item {
         min-width: 30%;
         height: 240px;
@@ -19,6 +8,22 @@
         justify-content: center;
         border: 1px solid black;
         margin: 0 7.5px 15px;
+        overflow: hidden;
+
+        &:hover{
+            cursor: pointer;
+            .box-list__image{
+                transform: scale(1.1);
+                transition: transform 6s cubic-bezier(.25, .45, .45, .95);
+            }
+            .box-list__content{
+                opacity: .9;
+            }
+        }
+
+        &.large{
+            height: 380px;
+        }
       
         &:first-child {
           margin-right: 7.5px;
@@ -28,6 +33,12 @@
           margin-left: 7.5px;
         }
     }
+    &__image{
+        width: 100%;
+        height: 100%;
+        background-position: center;
+        background-size: cover;
+    }
     &__content {
         height: 90px;
         padding: 0 25px;
@@ -36,6 +47,10 @@
         align-items: center;
         justify-content: center;
         border: 1px solid black;
+        background-color: #fff;
+        opacity: 0.7;
+        position: absolute;
+        transition: .1s ease-in-out;
     }
     &__title {
         font-weight: bold;
@@ -48,4 +63,4 @@
         font-weight: lighter;
         font-size: 16px;
     }
-  }
+}
